sysyruntimelibrary-master/functional_test/24_if_test3.err
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/24_if_test3.sy:17:20: error: syntax error, unexpected R_PARENTHESIS
17|   return (ififElse()
  |                     ^
before semantic ast:
 decList()
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/24_if_test3.sy:0:0: error: not find main function
